renamed manipulate to modify; added caching loader api v1; added disableCaching option

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -17,7 +17,7 @@
         },
         {
             "taskName": "test",
-            "args": ["--prefix", "manipulate-json-loader", "run", "test"],
+            "args": ["--prefix", "modify-json-loader", "run", "test"],
             "isTestCommand": true
         },
         {
