--- a/modify-json-loader/package.json
+++ b/modify-json-loader/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "manipulate-json-loader",
+  "name": "modify-json-loader",
   "version": "0.0.1",
   "description": "Manipulate properties or create whole json objects ",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --require test/helpers.js"    
+    "test": "mocha --require test/helpers.js"
   },
   "author": "tricora",
   "license": "ISC",
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "chai": "^4.1.0",
-    "mocha": "^3.4.2"
+    "mocha": "^3.4.2",
+    "sinon": "^2.3.8"
   }
 }
